--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -38,7 +38,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
     env: 
       Configuration: Release
-      SolutionPath: Confuser2.sln
+      SolutionPath: Confuser2.slnx
         
     steps:
     - name: Checkout
@@ -130,6 +130,7 @@ jobs:
         dotnet-version: |
           6.0.x
           8.0.x
+          10.0.x
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
