--- a/ConfuserEx.Common.props
+++ b/ConfuserEx.Common.props
@@ -7,8 +7,8 @@
 
   <PropertyGroup Label="Assembly Information">
     <_CurrentYear>$([System.DateTime]::Now.ToString(yyyy))</_CurrentYear>
-    <Authors>Ki;Martin Karing</Authors>
-    <Copyright>Copyright © 2014 Ki, 2018 - $(_CurrentYear) Martin Karing</Copyright>
+    <Authors>Ki;Martin Karing;Andrii Kurdiumov</Authors>
+    <Copyright>Copyright © 2014 Ki, 2018 - 2022 Martin Karing, 2016 - $(_CurrentYear) Andrii Kurdiumov</Copyright>
     <RepositoryUrl>https://github.com/mkaring/ConfuserEx.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
