Add test execution step via vstest.console to CI workflow
Discover all *.Test.dll assemblies targeting net461 and run them
using vstest.console.exe from the Visual Studio installation.

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -144,7 +144,21 @@ jobs:
 
     - name: Build
       run: msbuild ${{ env.SolutionPath }} /p:Configuration=${{ env.Configuration }} /p:Platform=x64 /v:m
-      
+
+    - name: Run tests via vstest.console
+      shell: pwsh
+      run: |
+        $vstestPath = (& "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -products * -find "Common7\IDE\Extensions\TestPlatform\vstest.console.exe") | Select-Object -First 1
+        if (-not $vstestPath) {
+          Write-Error "vstest.console.exe not found"
+          exit 1
+        }
+        Write-Host "Using: $vstestPath"
+        $testDlls = Get-ChildItem -Path "Tests" -Filter "*.Test.dll" -Recurse | Where-Object { $_.DirectoryName -match 'net461$' }
+        Write-Host "Found $($testDlls.Count) test assemblies"
+        $testDlls | ForEach-Object { Write-Host "  $($_.FullName)" }
+        & $vstestPath $testDlls.FullName /Framework:.NETFramework,Version=v4.6.1
+
     # Upload the package: https://github.com/marketplace/actions/upload-a-build-artifact
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
