--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -144,7 +144,14 @@ jobs:
 
     - name: Build
       run: msbuild ${{ env.SolutionPath }} /p:Configuration=${{ env.Configuration }} /p:Platform=x64 /v:m
-      
+
+    - name: Setup VSTest
+      uses: Malcolmnixon/Setup-VSTest@v4
+
+    - name: Run tests via vstest.console
+      run: vstest.console "**/bin/**/*Test.dll" /Framework:.NETFramework,Version=v4.6.1
+      working-directory: Tests
+
     # Upload the package: https://github.com/marketplace/actions/upload-a-build-artifact
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
