--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -66,39 +66,28 @@ jobs:
           ${{ runner.os }}-dotnetdevpack-
 
 
-    - name: Check if exists .NET 4.6.1 installer
-      id: exists_NDP461_DevPack
+    - name: Check if exists .NET 4.7.2 installer
+      id: exists_NDP472_DevPack
       shell: pwsh # Use PowerShell for Windows
       run: |
-        $filePath = "public/NDP461-DevPack-KB3105179-ENU.exe"
+        $filePath = "public/NDP472-DevPack-ENU.exe"
         if (Test-Path $filePath) {
             echo "file_exists=true" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
         } else {
             echo "file_exists=false" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
         }
 
-    - name: Download .NET 4.6.1 targeting pack
-      uses: suisei-cn/actions-download-file@818d6b7dc8fe73f2f924b6241f2b1134ca1377d9 
+    - name: Download .NET 4.7.2 targeting pack
+      uses: suisei-cn/actions-download-file@818d6b7dc8fe73f2f924b6241f2b1134ca1377d9
       with:
-          url: "https://download.microsoft.com/download/F/1/D/F1DEB8DB-D277-4EF9-9F48-3A65D4D8F965/NDP461-DevPack-KB3105179-ENU.exe"
+          url: "https://download.microsoft.com/download/4/b/2/4b2c08b5-2e00-4d73-a5ab-23e27c5c9c86/NDP472-DevPack-ENU.exe"
           target: public/
-      if: ${{ steps.exists_NDP461_DevPack.outputs.file_exists == 'false' }}
+      if: ${{ steps.exists_NDP472_DevPack.outputs.file_exists == 'false' }}
 
-#    - name: Download .NET 4.6.2 targeting pack
-#      uses: suisei-cn/actions-download-file@818d6b7dc8fe73f2f924b6241f2b1134ca1377d9 
-#      with:
-#          url: "https://download.microsoft.com/download/e/e/c/eec79116-8305-4bd0-aa83-27610987eec6/NDP462-DevPack-KB3151934-ENU.exe"
-#          target: public/
-      
-    - name: Install targeting pack .NET 4.6.1
+    - name: Install targeting pack .NET 4.7.2
       shell: cmd
       working-directory: public
-      run: NDP461-DevPack-KB3105179-ENU.exe /q
-
- #   - name: Install targeting pack .NET 4.6.2
- #     shell: cmd
- #     working-directory: public
- #     run: NDP462-DevPack-KB3151934-ENU.exe /q
+      run: NDP472-DevPack-ENU.exe /q
 
     # Install the .NET Core workload
     - name: Install .NET Core
@@ -126,7 +115,7 @@ jobs:
       uses: Malcolmnixon/Setup-VSTest@v4
 
     - name: Run tests via vstest.console
-      run: vstest.console "**/bin/**/*Test.dll" /Framework:.NETFramework,Version=v4.6.1
+      run: vstest.console "**/bin/**/*Test.dll" /Framework:.NETFramework,Version=v4.7.2
       working-directory: Tests
 
     # Upload the package: https://github.com/marketplace/actions/upload-a-build-artifact
