--- a/Tests/342_InterfaceRenamingLoop/342_InterfaceRenamingLoop.csproj
+++ b/Tests/342_InterfaceRenamingLoop/342_InterfaceRenamingLoop.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>InterfaceRenamingLoop</RootNamespace>
     <StartupObject>InterfaceRenamingLoop.Program</StartupObject>
   </PropertyGroup>
