--- a/Tests/78_SignatureMismatch/78_SignatureMismatch.csproj
+++ b/Tests/78_SignatureMismatch/78_SignatureMismatch.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>SignatureMismatch</RootNamespace>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
