--- a/Tests/MethodOverloading/MethodOverloading.csproj
+++ b/Tests/MethodOverloading/MethodOverloading.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>MethodOverloading</RootNamespace>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
