--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -34,8 +34,9 @@ jobs:
       matrix:
         configuration: [Release]
 
-    runs-on: windows-latest  # For a list of available runner types, refer to
-                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+    # For a list of available runner types, refer to
+    # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+    runs-on: windows-2025-vs2026
     env: 
       Configuration: Release
       SolutionPath: Confuser2.slnx
@@ -55,50 +56,6 @@ jobs:
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
         restore-keys: |
           ${{ runner.os }}-nuget-
-
-    - name: Cache .NET installers
-      uses: actions/cache@v4
-      with:
-        path: |
-          public/
-        key: ${{ runner.os }}-dotnet
-        restore-keys: |
-          ${{ runner.os }}-dotnetdevpack-
-
-
-    - name: Check if exists .NET 4.6.1 installer
-      id: exists_NDP461_DevPack
-      shell: pwsh # Use PowerShell for Windows
-      run: |
-        $filePath = "public/NDP461-DevPack-KB3105179-ENU.exe"
-        if (Test-Path $filePath) {
-            echo "file_exists=true" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-        } else {
-            echo "file_exists=false" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-        }
-
-    - name: Download .NET 4.6.1 targeting pack
-      uses: suisei-cn/actions-download-file@818d6b7dc8fe73f2f924b6241f2b1134ca1377d9 
-      with:
-          url: "https://download.microsoft.com/download/F/1/D/F1DEB8DB-D277-4EF9-9F48-3A65D4D8F965/NDP461-DevPack-KB3105179-ENU.exe"
-          target: public/
-      if: ${{ steps.exists_NDP461_DevPack.outputs.file_exists == 'false' }}
-
-#    - name: Download .NET 4.6.2 targeting pack
-#      uses: suisei-cn/actions-download-file@818d6b7dc8fe73f2f924b6241f2b1134ca1377d9 
-#      with:
-#          url: "https://download.microsoft.com/download/e/e/c/eec79116-8305-4bd0-aa83-27610987eec6/NDP462-DevPack-KB3151934-ENU.exe"
-#          target: public/
-      
-    - name: Install targeting pack .NET 4.6.1
-      shell: cmd
-      working-directory: public
-      run: NDP461-DevPack-KB3105179-ENU.exe /q
-
- #   - name: Install targeting pack .NET 4.6.2
- #     shell: cmd
- #     working-directory: public
- #     run: NDP462-DevPack-KB3151934-ENU.exe /q
 
     # Install the .NET Core workload
     - name: Install .NET Core
@@ -126,7 +83,7 @@ jobs:
       uses: Malcolmnixon/Setup-VSTest@v4
 
     - name: Run tests via vstest.console
-      run: vstest.console "**/bin/**/*Test.dll" /Framework:.NETFramework,Version=v4.6.1
+      run: vstest.console "**/bin/**/*Test.dll" /Framework:.NETFramework,Version=v4.7.2
       working-directory: Tests
 
     # Upload the package: https://github.com/marketplace/actions/upload-a-build-artifact
